# data-toolkit

./: .eslintrc.cjs  .gitignore  .gitlab-ci.yml  Dockerfile  README.adoc  README.md  build.bat  build.sh  bun.lockb  package-lock.json  package.json  quasar.config.ts
.github/workflows/: test.yaml
admin-server/: .env.example  Dockerfile  add_data.py  alembic.ini  application.py  conf_test_db.py  config.py  constant.py  database.py  pyproject.toml  utils.py
admin-server/alembic/: env.py
admin-server/alembic/versions/: 5a1201d3d92e_init_database.py
admin-server/dto/: dau.py
admin-server/router/: dau.py
admin-server/schema/: dau.py
admin-server/service/: dau.py
admin-server/test/: conftest.py
admin-server/test/router/: test_dau.py  test_dau_import.py  test_dau_search.py  test_import_DAU配置表.xls  test_import_dau_file.xls
client/: .eslintignore  .eslintrc.cjs  bun.lockb  cypress.config.ts  package-lock.json  package.json  quasar.config.ts  quasar.extensions.json  sonar-project.properties
client/changelog/: CHANGELOG_0.0.21.md  CHANGELOG_1.0.1.md  CHANGELOG_1.0.4.md  CHANGELOG_1.0.5.md  CHANGELOG_1.0.6.md  CHANGELOG_1.1.0.md
client/src-electron/: auto-update.ts  electron-env.d.ts  electron-main.ts  electron-preload.ts  start-kernel.ts  store.ts  (+1 more)
server/: README.md  alembic.ini  application.py  conf_test_db.py  constant.py  database.py  pyproject.toml  testdata.py  utils.py
server/alembic/: env.py
server/alembic/versions/: 15b5635b3f66_add_config.py  1d47da11f27f_add_config.py  ead52927d409_add_dau_config.py
server/dto/: dau.py  generator.py  merge.py  task.py
server/request/: generator.http  task.http
server/router/: generator.py  health.py  merge.py  task.py
server/schema/: task.py
server/service/: abstract_chat_generator.py  bar_chart_generator.py  chart_generator.py  chart_preview.py  line_chart_generator.py  load_csv_file.py
server/test/: conftest.py
server/test/router/: test_health.py  test_task.py  test_task_file.py
server/test/service/: test.csv  test_generate_chart.py  test_load_csv_file.py
src/: renderer.d.ts
src-electron/: boot.html  electron-main.ts  electron-preload.ts  error.html  start-kernel.ts
(+90 files in other folders)
