[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["李中月 <lizhongyue248@163.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12,<3.13,>=3.8"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
openpyxl = "^3.1.2"
dbutils = "^3.1.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pyinstaller = "^6.6.0"
sqlalchemy = "^2.0.30"
httpx = "^0.27.0"
pytest = "^8.2.0"
fastapi-camelcase = "^2.0.0"
numexpr = "^2.10.0"
xlrd = "^2.0.1"
alembic = "^1.13.1"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
